spec/ingress/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: PLACE_HOLDER_NAMESPACE
  labels:
    app: backend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01"
    kubernetes.io/ingress.class: "nginx-external"
spec:
  rules:
    - host: api.chatPLACE_HOLDER_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: backend
                  port: 
                    number: 3001
  tls:
    - hosts:
      - api.chatPLACE_HOLDER_DOMAIN
      secretName: api.chatPLACE_HOLDER_DOMAIN-tls
