spec/ingress/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: livecode-stg
  labels:
    app: frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01"
    kubernetes.io/ingress.class: "nginx-external"
spec:
  rules:
    - host: chat.stg.totvs-livecode.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: frontend
                  port: 
                    number: 3000
  tls:
    - hosts:
      - chat.stg.totvs-livecode.com
      secretName: chat.stg.totvs-livecode.com-tls
